# deadbit

./: README.md  pyproject.toml  setup.sh
deadbit/: __main__.py
