[tool.poetry]
name = "deadbit"
version = "0.1.0"
description = "Deadbit uses an LLM and a diffusions model to generate 4 panel comics."
authors = ["Leon Bezuidenhout"]
license = "MIT"
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
torch = "^2.5.1"
diffusers = "^0.31.0"
outlines = "^0.1.11"
transformers = "^4.47.0"
datasets = "^3.2.0"
bitsandbytes = "^0.45.0"
accelerate = "^1.2.1"
protobuf = "^5.29.1"
sentencepiece = "^0.2.0"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
